Create Orders page [Delivers #160414664]

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <script src="js/main.js"></script>
 </head>
-<body>
+<body id="background">
     <div id = "menu-bar">
         <a href="index.html">Home</a>
         <a href="order.html">Order</a>
@@ -19,13 +19,11 @@
         </a>
         <a href="Sign Up"></a>
     </div>
-    <div>
-    </div>
-    <div id = "home-text">
+    <div id="home-content">
         <span id="home-hungry">Hungry?!</span>
         <p id="home-here">Good, We are here</p>
         <p id="home-serve">to serve you</p>
-        <button class="button-order">Order Now</button>
+        <a href="order.html" class="button-order">Order Now</a>
     </div>
 </body>
 </html>
