--- a/ui/login.html
+++ b/ui/login.html
@@ -12,9 +12,9 @@
     <div id = "menu-bar">
         <a href="index.html">Home</a>
         <a href="order.html">Order</a>
+        <a href="history.html">Order History</a>
         <span id="right-menu"><a href="signup.html">Sign Up</a></span>
         <span id="right-menu"><a href="login.html">Login</a></span>
-        </a>
         <a href="Sign Up"></a>
     </div>
     <div class="left-half">
