--- a/ui/order.html
+++ b/ui/order.html
@@ -12,9 +12,9 @@
     <div id = "menu-bar">
         <a href="index.html">Home</a>
         <a href="order.html">Order</a>
+        <a href="history.html">Order History</a>
         <span id="right-menu"><a href="signup.html">Sign Up</a></span>
         <span id="right-menu"><a href="login.html">Login</a></span>
-        </a>
         <a href="Sign Up"></a>
     </div>
     <div class ="center">
@@ -88,7 +88,7 @@
         </tr>
     </table>
     <div class="checkout">
-        <a href="" id="checkout">Proceed to Checkout</a>
+        <a href="" class="checkout-button">Proceed to Checkout</a>
     </div>
    
 </body>
