Modify file structure for gh-pages [#160416080]

--- a/ui/login.html
+++ b/ui/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id = "menu-bar">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="order.html">Order</a>
         <a href="history.html">Order History</a>
         <span id="right-menu"><a href="signup.html">Sign Up</a></span>
