--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fast-Food-Fast</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-    <script src="js/main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="ui/css/style.css" />
+    <script src="ui/js/main.js"></script>
 </head>
 <body id="background">
     <div id = "menu-bar">
         <a href="index.html">Home</a>
-        <a href="order.html">Order</a>
-        <a href="history.html">Order History</a>
-        <span id="right-menu"><a href="signup.html">Sign Up</a></span>
-        <span id="right-menu"><a href="login.html">Login</a></span>
-        <a href="Sign Up"></a>
+        <a href="ui/order.html">Order</a>
+        <a href="ui/history.html">Order History</a>
+        <span id="right-menu"><a href="ui/signup.html">Sign Up</a></span>
+        <span id="right-menu"><a href="ui/login.html">Login</a></span>
     </div>
     <div id="home-content">
         <span id="home-hungry">Hungry?!</span>
