--- a/ui/history.html
+++ b/ui/history.html
@@ -10,12 +10,11 @@
 </head>
 <body>
     <div id = "menu-bar">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="order.html">Order</a>
         <a href="history.html">Order History</a>
         <span id="right-menu"><a href="signup.html">Sign Up</a></span>
         <span id="right-menu"><a href="login.html">Login</a></span>
-        <a href="Sign Up"></a>
     </div>
     <div class ="center">
         <h2>History of ordered food.</h2>
