--- a/ui/order.html
+++ b/ui/order.html
@@ -15,12 +15,11 @@
         <a href="history.html">Order History</a>
         <span id="right-menu"><a href="signup.html">Sign Up</a></span>
         <span id="right-menu"><a href="login.html">Login</a></span>
-        <a href="Sign Up"></a>
     </div>
     <div class ="center">
         <h2>Our Menu</h2>
     </div>
-    <table>
+    <table class="order-table">
         <tr>
             <td><img src="images/seafood.jpeg"></td>
             <td>
