--- a/ui/login.html
+++ b/ui/login.html
@@ -15,6 +15,7 @@
         <a href="history.html">Order History</a>
         <span id="right-menu"><a href="signup.html">Sign Up</a></span>
         <span id="right-menu"><a href="login.html">Login</a></span>
+        <span id="right-menu"><a href="orderslist.html">Admin</a></span>
     </div>
     <div class="left-half">
             <img src="images/food.jpeg">
