--- a/ui/orderslist.html
+++ b/ui/orderslist.html
@@ -11,64 +11,100 @@
 <body>
     <div id = "menu-bar">
         <a href="index.html">Home</a>
-        <a href="">Approve orders</a>
         <a href="orderslist.html">All Orders</a>
-        <span id="right-menu"><a href="">Mark as completed</a></span>
     </div>
-    <div class ="center">
-        <h2>List of all orders.</h2>
+    <div id="left-container">
+        <div class ="center">
+            <h2>List of all orders.</h2>
+        </div>
+        <table class="allorders">
+            <tr>
+                <th>Id</th>
+                <th>Customer Name</th>
+                <th>Phone</th>
+                <th>Address</th>
+                <th>Status</th>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Matovu Hakeem</td>
+                <td>0704527581</td>
+                <td>45 Bukoto Street</td>
+                <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Matovu Hakeem</td>
+                <td>0704527581</td>
+                <td>45 Bukoto Street</td>
+                <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Matovu Hakeem</td>
+                <td>0704527581</td>
+                <td>45 Bukoto Street</td>
+                <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Matovu Hakeem</td>
+                <td>0704527581</td>
+                <td>45 Bukoto Street</td>
+                <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Matovu Hakeem</td>
+                <td>0704527581</td>
+                <td>45 Bukoto Street</td>
+                <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Matovu Hakeem</td>
+                <td>0704527581</td>
+                <td>45 Bukoto Street</td>
+                <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
+            </tr>
+        </table>
     </div>
-    <table class="allorders">
-        <tr>
-            <th>Id</th>
-            <th>Customer Name</th>
-            <th>Phone</th>
-            <th>Address</th>
-            <th>Status</th>
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>Matovu Hakeem</td>
-            <td>0704527581</td>
-            <td>45 Bukoto Street</td>
-            <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>Matovu Hakeem</td>
-            <td>0704527581</td>
-            <td>45 Bukoto Street</td>
-            <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>Matovu Hakeem</td>
-            <td>0704527581</td>
-            <td>45 Bukoto Street</td>
-            <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>Matovu Hakeem</td>
-            <td>0704527581</td>
-            <td>45 Bukoto Street</td>
-            <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>Matovu Hakeem</td>
-            <td>0704527581</td>
-            <td>45 Bukoto Street</td>
-            <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>Matovu Hakeem</td>
-            <td>0704527581</td>
-            <td>45 Bukoto Street</td>
-            <td><button class="accept">Accept</button><button class="decline">Decline</button></td>
-        </tr>
-    </table>
+    <div id="right-container">
+        <div class="center">
+            <h2>Mark Completed Orders</h2>
+        </div>
+        <table class="allorders">
+                <tr>
+                    <th>Id</th>
+                    <th>Customer Name</th>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>Matovu Hakeem</td>
+                    <td><button class="accept">Mark as completed</button></td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>Matovu Hakeem</td>
+                    <td><button class="accept">Mark as completed</button></td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>Matovu Hakeem</td>
+                    <td><button class="accept">Mark as completed</button></td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>Matovu Hakeem</td>
+                    <td><button class="accept">Mark as completed</button></td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>Matovu Hakeem</td>
+                    <td><button class="accept">Mark as completed</button></td>
+                </tr>
+        </table>
+    </div>
 
 </body>
 </html>
