--- a/ui/index.html
+++ b/ui/index.html
@@ -9,13 +9,13 @@
     <script src="js/main.js"></script>
 </head>
 <body id="background">
-    <div id = "menu-bar">
+    <div class = "menu-bar" id="MainNav">
         <a href="index.html">Home</a>
         <a href="order.html">Order</a>
         <a href="history.html">Order History</a>
         <span id="right-menu"><a href="signup.html">Sign Up</a></span>
         <span id="right-menu"><a href="login.html">Login</a></span>
-        <a href="Sign Up"></a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
     <div id="home-content">
         <span id="home-hungry">Hungry?!</span>
