--- a/ui/order.html
+++ b/ui/order.html
@@ -9,83 +9,86 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    <div id = "menu-bar">
+    <div class = "menu-bar" id="MainNav">
         <a href="index.html">Home</a>
         <a href="order.html">Order</a>
         <a href="history.html">Order History</a>
         <span id="right-menu"><a href="signup.html">Sign Up</a></span>
         <span id="right-menu"><a href="login.html">Login</a></span>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
     <div class ="center">
         <h2>Our Menu</h2>
     </div>
-    <table class="order-table">
-        <tr>
-            <td><img src="images/seafood.jpeg"></td>
-            <td>
-                Sea Food and Fish
-                    <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
-            </td>
-            <td>Ugx 15000</td>
-            <td class="center">
-                Qty
-                    <p><input size="4" placeholder="1"></p>
-                    <p><img src="images/cart.svg" class="cart"></p>
-            </td>
-        </tr>
-        <tr>
-            <td><img src="images/seafood.jpeg"></td>
-            <td>
-                Sea Food and Fish
-                    <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
-            </td>
-            <td>Ugx 15000</td>
-            <td class="center">
-                Qty
-                    <p><input size="4" placeholder="1"></p>
-                    <p><img src="images/cart.svg" class="cart"></p>
-            </td>
-        </tr>
-        <tr>
-            <td><img src="images/seafood.jpeg"></td>
-            <td>
-                Sea Food and Fish
-                    <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
-            </td>
-            <td>Ugx 15000</td>
-            <td class="center">
-                Qty
-                    <p><input size="4" placeholder="1"></p>
-                    <p><img src="images/cart.svg" class="cart"></p>
-            </td>
-        </tr>
-        <tr>
-            <td><img src="images/seafood.jpeg"></td>
-            <td>
-                Sea Food and Fish
-                    <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
-            </td>
-            <td>Ugx 15000</td>
-            <td class="center">
-                Qty
-                    <p><input size="4" placeholder="1"></p>
-                    <p><img src="images/cart.svg" class="cart"></p>
-            </td>
-        </tr>
-        <tr>
-            <td><img src="images/seafood.jpeg"></td>
-            <td>
-                Sea Food and Fish
-                    <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
-            </td>
-            <td>Ugx 15000</td>
-            <td class="center">
-                Qty
-                    <p><input size="4" placeholder="1"></p>
-                    <p><img src="images/cart.svg" class="cart"></p>
-            </td>
-        </tr>
-    </table>
+    <div class="responsivetable">
+        <table class="order-table">
+            <tr>
+                <td><img src="images/seafood.jpeg"></td>
+                <td>
+                    Sea Food and Fish
+                        <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
+                </td>
+                <td>Ugx 15000</td>
+                <td class="center">
+                    Qty
+                        <p><input size="4" placeholder="1"></p>
+                        <p><img src="images/cart.svg" class="cart"></p>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="images/seafood.jpeg"></td>
+                <td>
+                    Sea Food and Fish
+                        <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
+                </td>
+                <td>Ugx 15000</td>
+                <td class="center">
+                    Qty
+                        <p><input size="4" placeholder="1"></p>
+                        <p><img src="images/cart.svg" class="cart"></p>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="images/seafood.jpeg"></td>
+                <td>
+                    Sea Food and Fish
+                        <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
+                </td>
+                <td>Ugx 15000</td>
+                <td class="center">
+                    Qty
+                        <p><input size="4" placeholder="1"></p>
+                        <p><img src="images/cart.svg" class="cart"></p>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="images/seafood.jpeg"></td>
+                <td>
+                    Sea Food and Fish
+                        <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
+                </td>
+                <td>Ugx 15000</td>
+                <td class="center">
+                    Qty
+                        <p><input size="4" placeholder="1"></p>
+                        <p><img src="images/cart.svg" class="cart"></p>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="images/seafood.jpeg"></td>
+                <td>
+                    Sea Food and Fish
+                        <p>5 tiger shrimps, garlic, butter, lemon, herbs, 5 tiger shrimps, garlic,</p>
+                </td>
+                <td>Ugx 15000</td>
+                <td class="center">
+                    Qty
+                        <p><input size="4" placeholder="1"></p>
+                        <p><img src="images/cart.svg" class="cart"></p>
+                </td>
+            </tr>
+        </table>
+    </div>
     <div class="checkout">
         <a href="" class="checkout-button">Proceed to Checkout</a>
     </div>
