--- a/ui/orderslist.html
+++ b/ui/orderslist.html
@@ -9,10 +9,11 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    <div id = "menu-bar">
-        <a href="index.html">Home</a>
-        <a href="orderslist.html">All Orders</a>
-    </div>
+        <div class = "menu-bar" id="MainNav">
+                <a href="index.html">Home</a>
+                <a href="orderslist.html">All Orders</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            </div>
     <div id="left-container">
         <div class ="center">
             <h2>List of all orders.</h2>
