Make index.html file visible for github pages [Delivers #160483941]

--- a/ui/orderslist.html
+++ b/ui/orderslist.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <div class = "menu-bar" id="MainNav">
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="orderslist.html">All Orders</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
