--- a/index.html
+++ b/index.html
@@ -11,24 +11,17 @@
 <body id="background">
     <div class = "menu-bar" id="MainNav">
         <a href="index.html">Home</a>
-<<<<<<< HEAD:index.html
         <a href="ui/order.html">Order</a>
         <a href="ui/history.html">Order History</a>
         <span id="right-menu"><a href="ui/signup.html">Sign Up</a></span>
         <span id="right-menu"><a href="ui/login.html">Login</a></span>
-=======
-        <a href="order.html">Order</a>
-        <a href="history.html">Order History</a>
-        <span id="right-menu"><a href="signup.html">Sign Up</a></span>
-        <span id="right-menu"><a href="login.html">Login</a></span>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
->>>>>>> UI:ui/index.html
     </div>
     <div id="home-content">
         <span id="home-hungry">Hungry?!</span>
         <p id="home-here">Good, We are here</p>
         <p id="home-serve">to serve you</p>
-        <a href="order.html" class="button-order">Order Now</a>
+        <a href="ui/order.html" class="button-order">Order Now</a>
     </div>
     
 </body>
