Work on PR feedback and improve responsiveness

--- a/ui/signup.html
+++ b/ui/signup.html
@@ -11,10 +11,8 @@
 <body>
     <div class = "menu-bar" id="MainNav">
         <a href="index.html">Home</a>
-        <a href="order.html">Order</a>
-        <a href="history.html">Order History</a>
-        <span id="right-menu"><a href="signup.html">Sign Up</a></span>
-        <span id="right-menu"><a href="login.html">Login</a></span>
+        <a href="login.html">Login</a>
+        <a href="signup.html">Sign Up</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
     <div class="wrapper">
@@ -22,7 +20,7 @@
             <img src="images/food.jpeg">
         </div>
         <div>
-            <form>
+            <form action="login.html">
                 <h2>Create an account.</h2>
                 <div class="signup-field">
                     <input type="text" placeholder="First Name">
