Add outer index.html

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body id="background">
     <div class = "menu-bar" id="MainNav">
         <a href="index.html">Home</a>
-        <a href="login.html">Login</a>
-        <a href="signup.html">Sign Up</a>
+        <a href="ui/login.html">Login</a>
+        <a href="ui/signup.html">Sign Up</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
     <div id="home-content">
         <span id="home-hungry">Hungry?!</span>
         <p id="home-here">Good, We are here</p>
         <p id="home-serve">to serve you.</p>
-        <a href="login.html" class="button-order">Order Now</a>
+        <a href="ui/login.html" class="button-order">Order Now</a>
     </div>
     
 </body>
