--- a/ui/login.html
+++ b/ui/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class = "menu-bar" id="MainNav">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="signup.html">Sign Up</a>
         <a href="orderslist.html">Admin</a>
