--- a/ui/signup.html
+++ b/ui/signup.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class = "menu-bar" id="MainNav">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="signup.html">Sign Up</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
