--- a/ui/order.html
+++ b/ui/order.html
@@ -30,7 +30,7 @@
                 <td class="center">
                     Qty
                         <p><input size="4" placeholder="1"></p>
-                        <p><img src="images/cart.svg" class="cart"></p>
+                        <p><input type="checkbox"></p>
                 </td>
             </tr>
             <tr>
@@ -43,7 +43,7 @@
                 <td class="center">
                     Qty
                         <p><input size="4" placeholder="1"></p>
-                        <p><img src="images/cart.svg" class="cart"></p>
+                        <p><input type="checkbox"></p>
                 </td>
             </tr>
             <tr>
@@ -56,7 +56,7 @@
                 <td class="center">
                     Qty
                         <p><input size="4" placeholder="1"></p>
-                        <p><img src="images/cart.svg" class="cart"></p>
+                        <p><input type="checkbox"></p>
                 </td>
             </tr>
             <tr>
@@ -69,7 +69,7 @@
                 <td class="center">
                     Qty
                         <p><input size="4" placeholder="1"></p>
-                        <p><img src="images/cart.svg" class="cart"></p>
+                        <p><input type="checkbox"></p>
                 </td>
             </tr>
             <tr>
@@ -82,7 +82,7 @@
                 <td class="center">
                     Qty
                         <p><input size="4" placeholder="1"></p>
-                        <p><img src="images/cart.svg" class="cart"></p>
+                        <p><input type="checkbox"></p>
                 </td>
             </tr>
         </table>
