--- a/ui/history.html
+++ b/ui/history.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class = "menu-bar" id="MainNav">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="order.html">Order</a>
         <a href="history.html">Order History</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
