--- a/ui/order.html
+++ b/ui/order.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class = "menu-bar" id="MainNav">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="order.html">Order</a>
         <a href="history.html">Order History</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -88,7 +88,7 @@
         </table>
     </div>
     <div class="checkout">
-        <a href="" class="checkout-button">Proceed to Checkout</a>
+        <a href="history.html" class="checkout-button">Order History</a>
     </div>
    
 </body>
