--- a/ui/signup.html
+++ b/ui/signup.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class = "menu-bar" id="MainNav">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="signup.html">Sign Up</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -21,7 +21,7 @@
         </div>
         <div>
             <form action="login.html">
-                <h2>Create an account.</h2>
+                <h2 class="center;">Create an account.</h2>
                 <div class="signup-field">
                     <input type="text" placeholder="First Name">
                 </div>
@@ -38,9 +38,9 @@
                     <input type="password" placeholder="Repeat Password">
                 </div>
                 <div class="submit">
-                    <input type="submit" value="Submit" id ="submit">
+                    <input type="submit" value="Sign Up" id ="submit">
                 </div>
-
+                Already have an account? <a href="signup.html"  class="link"><span>Login</span></a>
             </form>
         </div>
     </div>
