--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class = "menu-bar" id="MainNav">
         <a href="index.html">Home</a>
         <a href="ui/login.html">Login</a>
-        <a href="ui//signup.html">Sign Up</a>
+        <a href="ui/signup.html">Sign Up</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
     <div id="home-content">
