--- a/ui/login.html
+++ b/ui/login.html
@@ -32,8 +32,8 @@
         <div class="submit">
             <input type="submit" value="Login" id ="submit">
         </div>
-        <p><a href="ui/orderslist.html" class="link">Login as admin</a></p>
-        Sign Up <a href="ui/signup.html"  class="link"><span>here</span></a>
+        <p><a href="orderslist.html" class="link">Login as admin</a></p>
+        Sign Up <a href="signup.html"  class="link"><span>here</span></a>
     </form>
 </body>
 </html>
