--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span id="home-hungry">Hungry?!</span>
         <p id="home-here">Good, We are here</p>
         <p id="home-serve">to serve you.</p>
-        <a href="ui/login.html" class="button-order">Order Now</a>
+        <a href="login.html" class="button-order">Order Now</a>
     </div>
     
 </body>
