--- a/ui/login.html
+++ b/ui/login.html
@@ -33,7 +33,7 @@
             <input type="submit" value="Login" id ="submit">
         </div>
         <p><a href="ui/orderslist.html" class="link">Login as admin</a></p>
-        Sign Up <a href="ui/signup.html"  class="link"><span>here</span></a>
+        Sign Up <a href="signup.html"  class="link"><span>here</span></a>
     </form>
 </body>
 </html>
