--- a/ui/login.html
+++ b/ui/login.html
@@ -19,7 +19,7 @@
     <div class="left-half">
             <img src="images/food.jpeg">
     </div>
-    <form class="right-half" action="ui/order.html">
+    <form class="right-half" action="order.html">
         <h1>Ready to order Food?</h1>
         <h2>Log in first.</h2>
         <div class="signup-field">
