--- a/ui/signup.html
+++ b/ui/signup.html
@@ -40,7 +40,7 @@
                 <div class="submit">
                     <input type="submit" value="Sign Up" id ="submit">
                 </div>
-                Already have an account? <a href="signup.html"  class="link"><span>Login</span></a>
+                Already have an account? <a href="login.html"  class="link"><span>Login</span></a>
             </form>
         </div>
     </div>
